--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ snowflake-snowpark-python==1.1.0
 pyxlsb==1.0.10
 openpyxl==3.0.10
 xlrd==2.0.1
+streamlit==0.71.0
+pandas==1.1.3
+scikit-learn==0.23.2
+numpy==1.19.2
